Issues in translation.model package